# qj

./: .gitattributes  .gitignore  ANALYSIS.md  BENCHMARKS.md  BENCHMARK_PLAN.md  CLAUDE.md  CLI_TODOS.md  Cargo.toml  FASTER_PLAN.md  FEEDBACK.md  OPTIMIZATION_IDEAS.md  OTHER_FORMATS_PLAN.md  PASSTHROUGH_PLAN.md  PLAN.md  PLAN_NEXT_STEPS.md  POSITIONING.md  README.md  REAL_WORLD_TESTS.md  REDUCE_PLAN.md  SECURITY_PLAN.md  SINGLE_DOC_SPEEDUP.md  build.rs  mise.toml
.github/workflows/: benchmark.yml  checks.yml  release.yml
bench/: bench.sh  bench_cpp.cpp  gen_large.sh  gen_ndjson.rs  generate_ndjson.sh  run_bench.sh
benches/: PLAN.md  README.md  bench.sh  bench_cpp.cpp  bench_large_only.sh  bench_mem.rs  bench_tools.rs  build_cpp_bench.sh  compare_tools.sh  download_data.sh  download_gharchive.sh  download_testdata.sh  eval_regression.rs  gen_large.sh  generate_data.sh  parse_throughput.rs  results.md  results_ci.md  results_json.md  results_large_only.md  results_mem_json.md  results_mem_ndjson.md  results_ndjson.md  results_ndjson_extended_xsmall.md  results_ndjson_large.md  results_ndjson_medium.md  results_ndjson_small.md  results_specialized_ndjson.md  run_bench.sh  setup_bench_data.sh  verify_equivalence.sh
docs/: COMPATIBILITY.md  CONFORMANCE_100.md  FIX_TODOS.md  LIMITATIONS.md  MEMORY_ISSUE_PROGRESS.md  OPTIMIZATION_IDEAS.md  OTHER_FORMATS_PLAN.md  RELEASE.md  TEST_TODOS.md  TEST_TODOS_2.md  TEST_TODOS_3.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bridge_map.rs  fuzz_dom.rs  fuzz_double_format.rs  fuzz_eval.rs  fuzz_filter_parse.rs  fuzz_flat_eval_diff.rs  fuzz_ndjson.rs  fuzz_ndjson_diff.rs  fuzz_output.rs  fuzz_parse.rs  fuzz_streaming.rs
src/: decompress.rs  flat_eval.rs  flat_value.rs  input.rs  lib.rs  main.rs  output.rs  value.rs
src/filter/: builtins.rs  eval.rs  lexer.rs  mod.rs  module.rs  parser.rs  value_ops.rs
src/filter/builtins/: arrays.rs  date.rs  format.rs  io.rs  math.rs  mod.rs  paths.rs  regex.rs  streaming.rs  strings.rs  types.rs
src/parallel/: ndjson.rs
src/simdjson/: README.md  bridge.cpp  bridge.rs  ffi.rs  mod.rs  types.rs
tests/: cli_conformance.rs  conformance_gaps.rs  e2e.rs  feature_compat.rs  jq_compat_runner.rs  jq_conformance.rs  jq_differential.rs  ndjson.rs  simdjson_ffi.rs
tests/common/: mod.rs
tests/jq_compat/: feature_results.md  features.test  features.toml  run_compat.sh  run_features.sh  update_test_suite.sh
