[package]
name = "qj"
version = "0.1.0"
edition = "2024"
autobenches = false
description = "A faster jq — jq-compatible JSON processor using SIMD and parallel NDJSON. Quick JSON."
license = "MIT"
keywords = ["json", "jq", "simd", "jsonl", "cli"]
categories = ["command-line-utilities", "text-processing"]
repository = "https://github.com/6/qj"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
libc = "0.2"
memchr = "2"
rayon = "1"
itoa = "1"
ryu = "1"
jiff = "0.2"
serde_json = "1"
regex = "1"
base64 = "0.22"
mimalloc = "0.1.48"

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile = "3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
iai-callgrind = "0.16"

[profile.release]
opt-level = 3
lto = "thin"

[profile.bench]
debug = true

[[bench]]
name = "parse_throughput"
harness = false

[[bench]]
name = "eval_regression"
harness = false

[[bin]]
name = "gen_ndjson"
path = "benches/gen_ndjson.rs"

[[bin]]
name = "bench_tools"
path = "benches/bench_tools.rs"

[[bin]]
name = "bench_mem"
path = "benches/bench_mem.rs"
test = false
