[package]
name = "qj"
version = "0.1.2"
edition = "2024"
autobenches = false
description = "A fast, jq-compatible JSON processor powered by simdjson"
license = "MIT"
keywords = ["json", "jq", "simd", "ndjson", "jsonl"]
categories = ["command-line-utilities", "text-processing"]
repository = "https://github.com/6/qj"
exclude = [
    ".github/",
    "benches/",
    "docs/",
    "fuzz/",
    "tests/",
    ".claude/",
    "CLAUDE.md",
    "mise.toml",
]

[features]
bench = []

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
libc = "0.2"
memchr = "2"
rayon = "1"
itoa = "1"
ryu = "1"
jiff = "0.2"
serde_json = "1"
regex = "1"
base64 = "0.22"
mimalloc = "0.1.48"
flate2 = "1"
zstd = "0.13"
glob = "0.3"

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile = "3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
iai-callgrind = "0.16"
flate2 = "1"
zstd = "0.13"
proptest = "1.10.0"

[profile.release]
opt-level = 3
lto = "thin"
strip = true

[profile.bench]
debug = true

[[bench]]
name = "parse_throughput"
harness = false

[[bench]]
name = "eval_regression"
harness = false

[[bin]]
name = "bench_tools"
path = "benches/bench_tools.rs"
required-features = ["bench"]

[[bin]]
name = "bench_mem"
path = "benches/bench_mem.rs"
test = false
required-features = ["bench"]
