[package]
name = "qj-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.qj]
path = ".."

[workspace]
members = ["."]

[[bin]]
name = "fuzz_parse"
path = "fuzz_targets/fuzz_parse.rs"
doc = false

[[bin]]
name = "fuzz_dom"
path = "fuzz_targets/fuzz_dom.rs"
doc = false

[[bin]]
name = "fuzz_ndjson"
path = "fuzz_targets/fuzz_ndjson.rs"
doc = false

[[bin]]
name = "fuzz_filter_parse"
path = "fuzz_targets/fuzz_filter_parse.rs"
doc = false

[[bin]]
name = "fuzz_eval"
path = "fuzz_targets/fuzz_eval.rs"
doc = false

[[bin]]
name = "fuzz_ndjson_diff"
path = "fuzz_targets/fuzz_ndjson_diff.rs"
doc = false

[[bin]]
name = "fuzz_output"
path = "fuzz_targets/fuzz_output.rs"
doc = false

[[bin]]
name = "fuzz_double_format"
path = "fuzz_targets/fuzz_double_format.rs"
doc = false
